.manifests/policies/demo-policy.example.com.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/playground/refs/heads/main/schemas/json/v3/validatingpolicy-policies.kyverno.io-v1alpha1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: demo-policy.example.com
spec:
  evaluation:
    mode: Envoy
  variables:
  - name: force_authorized
    expression: object.attributes.request.http.headers[?"x-force-authorized"].orValue("") in ["enabled", "true"]
  - name: force_unauthenticated
    expression: object.attributes.request.http.headers[?"x-force-unauthenticated"].orValue("") in ["enabled", "true"]
  - name: metadata
    expression: '{"my-new-metadata": "my-new-value"}'
  validations:
  - expression: |
      variables.force_unauthenticated ?
        envoy.Denied(401)
          .WithBody("Authentication Failed")
          .Response() :
        envoy.Denied(403)
          .WithBody("Unauthorized Request")
          .Response()
  - expression: |
      envoy
        .Allowed()
        .WithHeader("x-validated-by", "my-security-checkpoint")
        .WithoutHeader("x-force-authorized")
        .WithResponseHeader("x-add-custom-response-header", "added")
        .Response()
        .WithMetadata(variables.metadata)
